Set jvm args up